talos-cluster/infra/arr/deployments.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: qbittorrent
  namespace: arr
spec:
  replicas: 1
  strategy:
    type: Recreate
  selector:
    matchLabels:
      app: qbittorrent
  template:
    metadata:
      labels:
        app: qbittorrent
    spec:
      nodeSelector:
        kubernetes.io/hostname: talos-wk-2
      terminationGracePeriodSeconds: 30
      containers:
        - name: qbittorrent
          image: lscr.io/linuxserver/qbittorrent:latest
          ports:
            - name: webui
              containerPort: 8080
            - name: torrent-tcp
              containerPort: 6881
              protocol: TCP
            - name: torrent-udp
              containerPort: 6881
              protocol: UDP
          volumeMounts:
            - name: config
              mountPath: /config
            - name: media
              mountPath: /data
      volumes:
        - name: config
          persistentVolumeClaim:
            claimName: qbittorrent-config
        - name: media
          persistentVolumeClaim:
            claimName: arr-media
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: sonarr
  namespace: arr
spec:
  replicas: 1
  strategy:
    type: Recreate
  selector:
    matchLabels:
      app: sonarr
  template:
    metadata:
      labels:
        app: sonarr
    spec:
      nodeSelector:
        kubernetes.io/hostname: talos-wk-2
      containers:
        - name: sonarr
          image: lscr.io/linuxserver/sonarr:latest
          ports:
            - name: http
              containerPort: 8989
          volumeMounts:
            - name: config
              mountPath: /config
            - name: media
              mountPath: /data
      volumes:
        - name: config
          persistentVolumeClaim:
            claimName: sonarr-config
        - name: media
          persistentVolumeClaim:
            claimName: arr-media
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: radarr
  namespace: arr
spec:
  replicas: 1
  strategy:
    type: Recreate
  selector:
    matchLabels:
      app: radarr
  template:
    metadata:
      labels:
        app: radarr
    spec:
      nodeSelector:
        kubernetes.io/hostname: talos-wk-2
      containers:
        - name: radarr
          image: lscr.io/linuxserver/radarr:latest
          ports:
            - name: http
              containerPort: 7878
          volumeMounts:
            - name: config
              mountPath: /config
            - name: media
              mountPath: /data
      volumes:
        - name: config
          persistentVolumeClaim:
            claimName: radarr-config
        - name: media
          persistentVolumeClaim:
            claimName: arr-media
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: prowlarr
  namespace: arr
spec:
  replicas: 1
  strategy:
    type: Recreate
  selector:
    matchLabels:
      app: prowlarr
  template:
    metadata:
      labels:
        app: prowlarr
    spec:
      nodeSelector:
        kubernetes.io/hostname: talos-wk-2
      containers:
        - name: prowlarr
          image: lscr.io/linuxserver/prowlarr:latest
          ports:
            - name: http
              containerPort: 9696
          volumeMounts:
            - name: config
              mountPath: /config
      volumes:
        - name: config
          persistentVolumeClaim:
            claimName: prowlarr-config
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: bazarr
  namespace: arr
spec:
  replicas: 1
  strategy:
    type: Recreate
  selector:
    matchLabels:
      app: bazarr
  template:
    metadata:
      labels:
        app: bazarr
    spec:
      nodeSelector:
        kubernetes.io/hostname: talos-wk-2
      containers:
        - name: bazarr
          image: lscr.io/linuxserver/bazarr:latest
          ports:
            - name: http
              containerPort: 6767
          volumeMounts:
            - name: config
              mountPath: /config
            - name: media
              mountPath: /data
      volumes:
        - name: config
          persistentVolumeClaim:
            claimName: bazarr-config
        - name: media
          persistentVolumeClaim:
            claimName: arr-media
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: flaresolverr
  namespace: arr
spec:
  replicas: 1
  strategy:
    type: Recreate
  selector:
    matchLabels:
      app: flaresolverr
  template:
    metadata:
      labels:
        app: flaresolverr
    spec:
      nodeSelector:
        kubernetes.io/hostname: talos-wk-2
      containers:
        - name: flaresolverr
          image: ghcr.io/flaresolverr/flaresolverr:v3.5.2
          ports:
            - name: http
              containerPort: 8191
          volumeMounts:
            - name: config
              mountPath: /config
      volumes:
        - name: config
          emptyDir: {}
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: jellyfin
  namespace: arr
spec:
  replicas: 1
  strategy:
    type: Recreate
  selector:
    matchLabels:
      app: jellyfin
  template:
    metadata:
      labels:
        app: jellyfin
    spec:
      nodeSelector:
        kubernetes.io/hostname: talos-wk-1
      runtimeClassName: nvidia
      containers:
        - name: jellyfin
          image: lscr.io/linuxserver/jellyfin:latest
          resources:
            limits:
              nvidia.com/gpu.shared: "1"
          ports:
            - name: http
              containerPort: 8096
          volumeMounts:
            - name: config
              mountPath: /config
            - name: media
              mountPath: /data
      volumes:
        - name: config
          persistentVolumeClaim:
            claimName: jellyfin-config
        - name: media
          persistentVolumeClaim:
            claimName: arr-media
