talos-cluster/infra/arr/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: arr
  namespace: arr
spec:
  ingressClassName: cilium
  rules:
    - host: sonarr.dbnet.work
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: sonarr
                port:
                  number: 8989

    - host: radarr.dbnet.work
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: radarr
                port:
                  number: 7878

    - host: prowlarr.dbnet.work
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: prowlarr
                port:
                  number: 9696

    - host: qbittorrent.dbnet.work
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: qbittorrent
                port:
                  number: 8080

    - host: bazarr.dbnet.work
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: bazarr
                port:
                  number: 6767

    - host: jellyfin.dbnet.work
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: jellyfin
                port:
                  number: 8096
